--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
 <ol>
   <li>Add a Input field which updates a property ('username') via Two-Way-Binding</li>
+  <input type="text"
+    class="form-control"
+    [(ngModel)]="username"/>
   <li>Output the username property via String Interpolation (in a paragraph below the input)</li>
+  <p>{{ username }}</p>
   <li>Add a button which may only be clicked if the username is NOT an empty string</li>
+  <button [disabled]="!username"
+    class="btn btn-primary"
+    (click)="onReset()"
+  >Make Empty</button>
   <li>Upon clicking the button, the username should be reset to an empty string</li>
 </ol>
